# llama-stack

./: .gitignore  Containerfile  Makefile  README.md  lightspeed-stack.yaml  package.json  pyproject.toml  run.yaml
.github/workflows/: ci.yml  release.yml  validation.yml
docs/: DEPLOYMENT.md  RELEASE.md
env/: default-values.env
scripts/: entrypoint.sh
scripts/python-scripts/: sync.py
